# train-yolo-model

./: .gitignore  README.md  pyproject.toml  ruff.toml
.github/workflows/: lint.yml
cfg/yolov10/: sugarcane.yaml
data/: pineapple.yaml  sugarcane.yaml
utils/: download_yolo_weights.ps1
weights/: .gitignore  weights_map.json
