[project]
name = "train-yolo-model"
version = "0.1.0"
description = "Train YOLO model"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "albumentations>=2.0.4",
    "numpy==1.26.4",
    "ultralytics==8.3.75",
    "torch==2.6.0",
    "torchvision==0.21.0",
]


[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.9.6",
]
export = [
    "onnx>=1.17.0",
    "onnxslim>=0.1.48",
]

logging = [
    "tensorboard>=2.13.0",
]

[tool.uv]
default-groups = ["dev", "export", "logging"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'"},
    { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'"}
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'"},
    { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'"}
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
